Fixing form styling on iOS

--- a/_sass/theme/_subscribe.scss
+++ b/_sass/theme/_subscribe.scss
@@ -24,6 +24,9 @@
 /* --------------------------------------------------------
             Subscribe Form
 -------------------------------------------------------- */
+form {
+    -webkit-appearance: none;
+}
 .mc-field-group { 
     display: inline-block; 
 }
